--- a/repo-structure/pkg/app/routes.go.tmpl
+++ b/repo-structure/pkg/app/routes.go.tmpl
@@ -5,5 +5,8 @@ func (a *App) initializeRoutes() {
 
 	// specification routes
 	a.Router.HandleFunc(apiV1+"/specification/list", a.listConnectorSpecification).Methods("GET", "OPTIONS")
-	// a.Router.HandleFunc(apiV1+"/specification/test", a.testConnectorSpecification).Methods("POST", "OPTIONS")
+	{{range .Endpoints}} {{if eq .Name "account"}} 
+	a.Router.HandleFunc(apiV1+"/specification/test", a.testConnectorSpecification).Methods("POST", "OPTIONS")
+	{{end}}
+    {{end}}
 }
