--- a/repo-structure/pkg/app/router.go.tmpl
+++ b/repo-structure/pkg/app/router.go.tmpl
@@ -6,16 +6,24 @@ import (
 	"io/ioutil"
     _ "errors"
 
-	{{$hasPathParameters := false}}
-	{{range .Endpoints}}{{if .ApiPath | isPathParam}}{{$hasPathParameters = true}}{{end}}{{end}}
-	{{if $hasPathParameters}}
+	{{- $hasPathParameters := false}}
+	{{- range .Endpoints}}{{if .ApiPath | isPathParam}}{{$hasPathParameters = true}}{{end}}{{end}}
+	{{- if $hasPathParameters}}
 	"github.com/gorilla/mux"
-	{{end}}
+	{{- end}}
 
 	"github.com/kosha/{{.ConnectorName}}-connector/pkg/models"
 	"github.com/kosha/{{.ConnectorName}}-connector/pkg/httpclient"
 )
 
+// listConnectorSpecification godoc
+// @Summary Get connector specification details
+// @Description Retrieve necessary environment variables
+// @Tags specification
+// @Accept json
+// @Produce json
+// @Success 200 {object} object
+// @Router /api/v1/specification/list [get]
 func (a *App) listConnectorSpecification(w http.ResponseWriter, r *http.Request) {
 	//Allow CORS here By * or specific origin
 	w.Header().Set("Access-Control-Allow-Origin", "*")
@@ -34,6 +42,15 @@ func (a *App) listConnectorSpecification(w http.ResponseWriter, r *http.Request)
 	})
 }
 
+// testConnectorSpecification godoc
+// @Summary Test auth against the specification
+// @Description Check if domain account can be verified
+// @Tags specification
+// @Accept  json
+// @Produce  json
+// @Param text body models.Specification false "Enter auth and domain name properties"
+// @Success 200
+// @Router /api/v1/specification/test [{{ .Auth.MeEndpoint.Method | ToLower }}]
 func (a *App) testConnectorSpecification(w http.ResponseWriter, r *http.Request) {
 
 	//Allow CORS here By * or specific origin
@@ -66,34 +83,50 @@ func (a *App) testConnectorSpecification(w http.ResponseWriter, r *http.Request)
 }
 
 {{range .Endpoints}} 
+// {{ .Name }} godoc
+// @Summary {{ .Description }}
+// @Tags {{ .Tag }}
+// @Accept  json
+// @Produce  json
+{{- range .QueryParameters }}
+// @Param {{ . }} query string false "{{ . }}"
+{{- end}}
+{{- if .ApiPath | isPathParam}}
+// @Param id path string true "Enter id"
+{{- end}}
+{{- if .Body }}
+// @Param body body false "Enter properties"
+{{- end }}
+// @Success 200
+// @Router {{ .KoshaPath }} [{{ .Method | ToLower }}]
 func (a *App) {{.Name}}(w http.ResponseWriter, r *http.Request) {
 	//Allow CORS here By * or specific origin
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Access-Control-Allow-Headers", "*")
 	w.Header().Set("Access-Control-Allow-Methods", "*")
 
-	{{if eq $.Auth.Type "Basic Authentication"}}
-	{{if .ApiPath | isPathParam}}
+	{{- if eq $.Auth.Type "Basic Authentication"}}
+	{{- if .ApiPath | isPathParam}}
 	vars := mux.Vars(r)
 	id := vars["id"]
-	{{end}}
-	{{if or (eq .Method "POST") (eq .Method "PUT")}}
+	{{- end}}
+	{{- if or (eq .Method "POST") (eq .Method "PUT")}}
 	var bodyBytes []byte
 	if r.Body != nil {
 		bodyBytes, _ = ioutil.ReadAll(r.Body)
 	} else {
 		respondWithError(w, http.StatusBadRequest, "Empty Body")
 	}
-	{{end}}
-	{{if and (or (eq .Method "POST") (eq .Method "PUT")) (.ApiPath | isPathParam)}} 
+	{{- end}}
+	{{- if and (or (eq .Method "POST") (eq .Method "PUT")) (.ApiPath | isPathParam)}} 
 	res, err := httpclient.{{ .Name | Title }}(id, a.Cfg.GetUsername(), a.Cfg.GetPassword(), bodyBytes, r.URL.Query())
-	{{else if or (eq .Method "POST") (eq .Method "PUT")}} 
+	{{- else if or (eq .Method "POST") (eq .Method "PUT")}} 
 	res, err := httpclient.{{ .Name | Title }}(a.Cfg.GetUsername(), a.Cfg.GetPassword(), bodyBytes, r.URL.Query())
-	{{else if and (or (eq .Method "GET") (eq .Method "DELETE")) (.ApiPath | isPathParam)}}
+	{{- else if and (or (eq .Method "GET") (eq .Method "DELETE")) (.ApiPath | isPathParam)}}
 	res, err := httpclient.{{ .Name | Title }}(id, a.Cfg.GetUsername(), a.Cfg.GetPassword(), r.URL.Query())
-	{{else if or (eq .Method "GET") (eq .Method "DELETE")}}
+	{{- else if or (eq .Method "GET") (eq .Method "DELETE")}}
 	res, err := httpclient.{{ .Name | Title }}(a.Cfg.GetUsername(), a.Cfg.GetPassword(), r.URL.Query())
-	{{end}}
+	{{- end}}
 	if err != nil {
 		a.Log.Errorf("Error in {{ .Name }}", err)
 		respondWithError(w, http.StatusBadRequest, err.Error())
